Modifico error en TP1

--- a/TP1/TinyGPT_es.ipynb
+++ b/TP1/TinyGPT_es.ipynb
@@ -4466,7 +4466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "f757e415",
    "metadata": {
     "id": "f757e415"
@@ -4499,7 +4499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "71a1b596",
    "metadata": {},
    "outputs": [],
@@ -4522,7 +4522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "4063b208",
    "metadata": {},
    "outputs": [
@@ -4541,7 +4541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "KdYmn-3KpZ56",
    "metadata": {
     "colab": {
@@ -4555,56 +4555,56 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "loss 2.09491: 100%|██████████| 11246/11246 [02:23<00:00, 78.52it/s]\n"
+      "loss 2.11099: 100%|██████████| 11246/11246 [02:30<00:00, 74.90it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Época 1 - pérdida de entrenamiento: 2.1026\n"
+      "Época 1 - pérdida de entrenamiento: 2.1099\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "val_loss 2.00385: 100%|██████████| 1246/1246 [00:05<00:00, 209.91it/s]\n"
+      "val_loss 2.05237: 100%|██████████| 1246/1246 [00:05<00:00, 215.87it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Época 1 - pérdida de validación: 2.0437\n"
+      "Época 1 - pérdida de validación: 2.0445\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "loss 2.12363: 100%|██████████| 11246/11246 [02:27<00:00, 76.38it/s]\n"
+      "loss 2.14747: 100%|██████████| 11246/11246 [02:28<00:00, 75.87it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Época 2 - pérdida de entrenamiento: 2.1678\n"
+      "Época 2 - pérdida de entrenamiento: 2.0877\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "val_loss 2.00384: 100%|██████████| 1246/1246 [00:06<00:00, 202.36it/s]"
+      "val_loss 2.05236: 100%|██████████| 1246/1246 [00:05<00:00, 213.88it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Época 2 - pérdida de validación: 2.0437\n",
+      "Época 2 - pérdida de validación: 2.0445\n",
       "Entrenamiento completo.\n"
      ]
     },
@@ -4652,7 +4652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "798ca80d",
    "metadata": {
     "colab": {
@@ -4666,10 +4666,10 @@
     {
      "data": {
       "text/plain": [
-       "\"To bega bemicerens gorsit's:\\nThir gre; ande seasve the didem,\\nThom smeicob: sple day when dome and wan, p\""
+       "\"To bety you o':\\nYou briustourer ad,\\nWe an'd ben the\\nbupst howerte wolich, I ashert: thand wand reve sheis\""
       ]
      },
-     "execution_count": 26,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4701,7 +4701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "id": "1875a7ee",
    "metadata": {
     "id": "1875a7ee"
@@ -4782,7 +4782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "id": "076f9e0f",
    "metadata": {
     "id": "076f9e0f"
@@ -4795,7 +4795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "id": "a7acf822",
    "metadata": {},
    "outputs": [
@@ -4803,16 +4803,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "result 1:  To be you you not you poiro. Seiond re thak\n",
-      "and hetor, me thy shour: the\n",
-      "Wie grand! Ang crows to as,\n",
-      "Whur\n",
-      "result 2:  To be sole hirt\n",
-      "Oth sans the tad het wharngon. Comie sin.\n",
+      "result 1:  To bet uwey:\n",
+      "Yous to fall we, gos?\n",
       "\n",
-      "COMINIUS:\n",
-      "Ses it a mu mete ay all he harsel:\n",
-      "T\n"
+      "OLUWe ber atwir you ch, ithand:\n",
+      "Ple owy fyirel droy?\n",
+      "\n",
+      "MENENIUS:\n",
+      "Whice\n",
+      "result 2:  To bee bot sto sed.\n",
+      "\n",
+      "BRUS:\n",
+      "That he bethay yours mid the mat thavey therese ondy\n",
+      "Thins thy herit bart out\n",
+      "\n"
      ]
     }
    ],
@@ -4834,7 +4838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "ac0b57f2",
    "metadata": {
     "id": "ac0b57f2"
@@ -4877,7 +4881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "1f606f6f",
    "metadata": {
     "id": "1f606f6f"
@@ -4903,7 +4907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 47,
    "id": "761e0a6b",
    "metadata": {},
    "outputs": [],
@@ -4946,8 +4950,11 @@
     "\n",
     "        # 4) Construir máscara one-hot para los top-k por token\n",
     "        #    one_hot_topk: (B, T, E) con 1 en expertos seleccionados, 0 en el resto\n",
-    "        one_hot_topk = torch.zeros(B, T, E, device=x.device, dtype=expert_outputs.dtype)\n",
+    "        # one_hot_topk = torch.zeros(B, T, E, device=x.device, dtype=expert_outputs.dtype)\n",
+    "        one_hot_topk = torch.zeros(B, T, E, device=x.device, dtype=topk_probs.dtype)\n",
+    "\n",
     "        one_hot_topk.scatter_(dim=2, index=topk_idx, src=torch.ones_like(topk_probs))\n",
+    "        \n",
     "\n",
     "        # 5) Pesar con los top-k probs: expandimos probs a (B, T, E, 1) y multiplicamos\n",
     "        weights = (one_hot_topk * 0)  # solo para declarar; reusamos dtype/dispositivo\n",
@@ -4964,7 +4971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 48,
    "id": "4507fcd8",
    "metadata": {
     "id": "4507fcd8"
@@ -4996,7 +5003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 49,
    "id": "7077f76b",
    "metadata": {
     "id": "7077f76b"
@@ -5019,7 +5026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 50,
    "id": "5f0cf567",
    "metadata": {},
    "outputs": [
@@ -5028,7 +5035,7 @@
      "output_type": "stream",
      "text": [
       "cuda\n",
-      "<class 'torch.device'>\n"
+      "<class 'str'>\n"
      ]
     }
    ],
@@ -5039,7 +5046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "FJIDVc0KrpEM",
    "metadata": {
     "id": "FJIDVc0KrpEM"
@@ -5047,15 +5054,14 @@
    "outputs": [],
    "source": [
     "\n",
-    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"  \n",
-    "m_moe = TinyGPT(config).to(torch.device(device))         \n",
-    "# m_moe = TinyGPT(config).to(device)\n",
-    "model_moe = m\n"
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "m_moe = TinyGPT(config).to(device)\n",
+    "model_moe = m_moe\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 52,
    "id": "762a7e42",
    "metadata": {},
    "outputs": [],
@@ -5068,7 +5074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 53,
    "id": "2xz2uaMvrrAW",
    "metadata": {
     "id": "2xz2uaMvrrAW"
@@ -5078,56 +5084,56 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "loss 2.14873: 100%|██████████| 11246/11246 [02:22<00:00, 78.70it/s]\n"
+      "loss 2.17698: 100%|██████████| 11246/11246 [03:05<00:00, 60.51it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Época 1 - pérdida de entrenamiento: 2.2107\n"
+      "Época 1 - pérdida de entrenamiento: 2.1914\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "val_loss 2.07667: 100%|██████████| 1246/1246 [00:05<00:00, 212.24it/s]\n"
+      "val_loss 2.14924: 100%|██████████| 1246/1246 [00:07<00:00, 168.89it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Época 1 - pérdida de validación: 2.0530\n"
+      "Época 1 - pérdida de validación: 2.0903\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "loss 2.10255: 100%|██████████| 11246/11246 [02:23<00:00, 78.60it/s]\n"
+      "loss 2.20115: 100%|██████████| 11246/11246 [03:06<00:00, 60.29it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Época 2 - pérdida de entrenamiento: 2.0877\n"
+      "Época 2 - pérdida de entrenamiento: 2.1790\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "val_loss 2.07667: 100%|██████████| 1246/1246 [00:05<00:00, 210.81it/s]"
+      "val_loss 2.14924: 100%|██████████| 1246/1246 [00:07<00:00, 165.89it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Época 2 - pérdida de validación: 2.0530\n",
+      "Época 2 - pérdida de validación: 2.0903\n",
       "Entrenamiento completo.\n"
      ]
     },
@@ -5166,7 +5172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 54,
    "id": "772ed353",
    "metadata": {},
    "outputs": [],
@@ -5229,7 +5235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 55,
    "id": "36494d2f",
    "metadata": {},
    "outputs": [
@@ -5237,10 +5243,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To beilencr\n",
-      "Sert, the peit of mee forness\n",
-      "Whall mase wre she henee anas tow tono thore\n",
-      "se wall male bly m\n"
+      "To best to'l is, swand\n",
+      "Cith wellerecir is,\n",
+      "Ougir, as mutrind, the thadteret to wastowng it, the sthe ho m\n"
      ]
     }
    ],
@@ -5263,7 +5268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 56,
    "id": "c08536d8",
    "metadata": {
     "id": "c08536d8"
@@ -5305,7 +5310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "83a8993c",
    "metadata": {
     "colab": {
@@ -5352,24 +5357,6 @@
     "- \n",
     "- "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "050b22f1",
-   "metadata": {},
-   "source": [
-    "# ¡Felicitaciones! 🎉\n",
-    "\n",
-    "Después de completar las tareas has preentrenado satisfactoriamente para fi... ¡Ahora puedes presumir ante tus amigos sobre cómo funcionan los LLM y los GPT!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a174d174",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
